# LH_coupling_code_remi

./: LH_1D_Coupling.py  Test_1D_Helmholtz.py  ideas_for_wave_launchers.txt  ngmesh.ini  pyproject.toml  reviewer.py  uoi.txt
2D_coupling_infty_y/: config_2D_coupling.py  main_jupyter_2D_coupling.ipynb  post_process_2D_coupling.py  solver_2D_coupling.py
LH_2D_Coupling/: 1D_2D_Comparison.py  config_2D_coupling_V2.py  convergence_study.ipynb  main_jupyter_2D_coupling_V2.ipynb  post_process_2D_coupling_V2.py  solver_2D_coupling_V2.py
LH_2D_Coupling___V1/: 1D_2D_Coupling_Comparison.py  convergence_study_V1.ipynb  main_jupyter_2D_coupling_V1.ipynb  post_process_2D_coupling_V1.py  solver_2D_coupling_V1.py
LH_2D_Coupling___V2/: 1D_2D_Coupling_Comparison.py  config_2D_coupling_V2.py  solver_1D_coupling.py
LH_2D_Coupling___V3/: config_2D_coupling_V3.py  config_2Dcoupling_V3.py  diagnostic_post_process_V3.py  main_jupyterNB_2DCoupling_V3.ipynb  main_jupyter_2D_coupling_V2.ipynb  main_jupyter_2D_coupling_V3.ipynb  mesh_visualizer.py  my_mesh.vol  ngmesh.ini  post_process_2D_coupling_V2.py  post_process_V3__diags_n_scans.py  solver_2D_coupling_V2.py  solver_2D_coupling_V3.py  solver_Hcurl_2D_V3.py  solver_Hcurl_3D_V3.py
LH_2D_Coupling___V4/: config_2D_coupling_V4.py  main_jupyter_2D_coupling_V4.ipynb  post_process_2D_coupling_V4.py  solver_2D_coupling_V4.py
Test___V5/: H1xH1_Plane_Propagative_Wave_in_Vacuum.py  HCurl_3D_Plane_Propagative_Wave_in_Vacuum.py  HCurl_Plane_Propagative_Wave_in_Vacuum.py  Plane_Propagative_Wave_in_Vacuum.py
(+28 files in other folders)
